        Reviewed by Darin Adler.

https://bugs.webkit.org/show_bug.cgi?id=52473
        Auto-scaling to avoid orphans is broken, remove dysfunctional code

        * WebView/WebHTMLView.mm:
        (-[WebHTMLView _setPrinting:minimumPageWidth:height:maximumPageWidth:adjustViewSize:paginateScreenContent:]):
        (-[WebHTMLView _scaleFactorForPrintOperation:]):
        (-[WebHTMLView knowsPageRange:]):



Canonical link: https://commits.webkit.org/66669@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@76435 268f45cc-cd09-0410-ab3c-d52691b4dbfc